# battle-net-manager

./: .gitignore  CLAUDE.md  README.md  README_zh.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/battle_net/: config.rs  core.rs  mod.rs  models.rs  process.rs  region.rs  registry.rs  session_state.rs
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.tsx  app.css  bridge.ts  index.tsx  types.ts
webui/src/components/: AccountCard.tsx  AccountGrid.tsx  AccountModal.tsx  Header.tsx  Sidebar.tsx  UpdateModal.tsx
webui/src/i18n/: index.tsx
webui/src/i18n/locales/: en.ts  zh.ts
webui/src/lib/: utils.ts
