[package]
name = "battle-net-manager"
version = "0.0.1"
description = "战网账号切换"
authors = ["bgm004"]
edition = "2021"

[lib]
name = "battle_net_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
opener = "0.7"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }
winreg = "0.55"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "s"
strip = true
